src/include/pr.h

/* types */
typedef struct tTag {
	struct tTag* child;
	struct tTag* next;
	char* tag;
	char* desc;
	char* path;
	char* file;
	char* type;
	char* name;
	char* palette;
	char* paletteindex;
	char* paletteorder;
	char* paletteoffset;
	char* value;
	char* index;
	char* order;
	char* version;
	char* number;
	char* flags;
	char* colors;
}tTag;
/***************************************************************\
|                           Prototypes                          |
\***************************************************************/
/* The library EXPORTS are:
 * freeParsedStructure
 * freeXmlCache
 * freeTagStructure
 * xmlParseStructure
 * xmlParseFile
 * prClassifyDat
 * prExportDat
 * prExportDatOpt
 * prImportDat
 * prImportDatOpt
 * prSetOutput
 * resourceTreeGetChild
 * resourceTreeGetInfo
 * resourceTreeGetNext
 * setCompressionLevel
 */

/* Main functions */
int   prExportDat(const char* vDatFile, const char* vDirName, const char* vResFile);
int   prImportDat(const char* vDatFile, const char* vDirName, const char* vResFile);
/* Extra featured functions */
int   prExportDatOpt(const char* vDatFile, const char* vDirName,
      const char* vResFile,int opt,const char * vDatFileName,
      const char* datAuthor, const char* backupExtension, const char* format);
int   prImportDatOpt(const char* vDatFile, const char* vDirName,
      const char* vResFile,int opt,const char* vDatFileName,
      const char* backupExtension);
void  prSetOutput         (FILE* output);
/* XML parsing functions */
void  freeParsedStructure (tTag** structure);
tTag* resourceTreeGetChild(tTag* whereAmI);
int   resourceTreeGetInfo (tTag* whereAmI, char** tag, char** desc, char** path, char** file, char** type, char** name, char** palette, char** value, char** version, char** number,char** colors);
tTag* resourceTreeGetNext (tTag* whereAmI);